# qtminstatic

./: .gitignore  CMakeLists.txt  DoQtStatic.cmake  Makefile  main.cpp  qtcore.patch  readme.md
